--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,2 +1,30 @@
-.main {
+.header {
+  position: fixed;
+  top: 25%;
+  left: 10%;
+  z-index: 10;
+  display: flex;
+  width: 25%;
+  min-width: 250px;
+  transform: translateY(-75%);
+}
+
+.brand {
+  padding: 0 40px 0 0;
+  font-weight: var(--font-weight-base-heavy);
+  white-space: none;
+  letter-spacing: 1px;
+}
+
+.update {
+  display: block;
+  margin-bottom: 1rem;
+  font-size: 0.75rem;
+}
+
+.hr {
+  opacity: 0.5;
+  width: 75%;
+  border: 0;
+  border-bottom: 1px solid var(--gray);
 }
