--- a/src/styles/base/global.css
+++ b/src/styles/base/global.css
@@ -4,6 +4,7 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
   font-family: var(--font-family-base);
+  font-size: var(--font-size-base);
   font-weight: var(--font-weight-base);
 }
 
