--- a/src/styles/base/variables.css
+++ b/src/styles/base/variables.css
@@ -5,14 +5,18 @@
   /* COLORS */
   --black: #000000;
   --white: #ffffff;
-  --bg-color: #191919;
-  --text-color: #ffffff;
+  --bg-color: var(--white);
+  --text-color: var(--black);
   --primary: #fed34a;
   --gray: #7e7e7e;
 
   /* TYPOGRAPHY */
-  --font-family-base: ff-meta-serif-web-pro, sans-serif;
-  --font-weight-base: 300;
+  --font-size-base: 16px;
+  --font-family-base: futura-pt, sans-serif;
+  --font-weight-base: 400;
+  --font-weight-base-heavy: 700;
+  --font-family-heading: ff-meta-serif-web-pro, sans-serif;
+  --font-weight-heading: 300;
 
   /* DEPTH */
   --z-index-menu: 100;
