--- a/src/components/MenuBurger/index.module.css
+++ b/src/components/MenuBurger/index.module.css
@@ -1,10 +1,17 @@
 .root {
   position: relative;
+  padding: 30px 0;
+}
+
+.button {
+  position: relative;
   margin: 0;
   padding: 10px 10px 10px 35px;
   border: 0;
   background-color: transparent;
   outline: 0 none;
+  cursor: none;
+  transition: opacity 0.7s var(--power3-ease-in-out);
 
   &::after,
   &::before {
@@ -16,18 +23,75 @@
     background-color: black;
     content: '';
     transform: translate3d(0, -4px, 0);
+    transition: all 0.7s var(--power3-ease-in-out);
   }
 
   &::after {
     width: 12px;
     transform: translate3d(0, 2px, 0);
+    transition: all 0.7s var(--power3-ease-in-out) 0.1s;
   }
 }
 
 .label {
-  font-family: var(--font-family-base), sans-serif;
-  font-size: 1rem;
-  font-weight: var(--font-weight-base);
+  display: inline-block;
+  font-family: var(--font-family-base);
+  font-size: 0.85rem;
+  font-weight: var(--font-weight-base-heavy);
   white-space: nowrap;
   letter-spacing: 1px;
+  transition: transform 0.7s var(--power3-ease-in-out);
+}
+
+.slider {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  width: 38px;
+  height: 230px;
+  border: 1px dashed var(--gray);
+  border-radius: 19px;
+  background-color: transparent;
+  content: '';
+  pointer-events: none;
+  transform: translate3d(-50%, -50%, 0);
+  transition: all 0.2s var(--power3-ease-out);
+}
+
+.hasHover {
+  & .button {
+    &::after {
+      opacity: 0;
+      transform: translate3d(100%, 2px, 0);
+      transition: all 0.7s var(--power3-ease-in-out);
+    }
+    &::before {
+      opacity: 0;
+      transform: translate3d(100%, -4px, 0);
+      transition: all 0.7s var(--power3-ease-in-out) 0.1s;
+    }
+  }
+
+  & .label {
+    transform: translate3d(-12px, 0, 0);
+  }
+}
+
+.isOpen {
+  & .button {
+    opacity: 0;
+  }
+
+  & .label {
+    opacity: 0;
+    transform: scale(0.2, 0.2) translate3d(-12px, 0, 0);
+    transform-origin: 20% 50%;
+    transition: all 0.3s ease-in-out;
+  }
+
+  & .slider {
+    opacity: 0.2;
+    transition: all 0.5s var(--power3-ease-in);
+  }
 }
