--- a/src/styles/base/global.css
+++ b/src/styles/base/global.css
@@ -6,6 +6,7 @@ body {
   font-family: var(--font-family-base);
   font-size: var(--font-size-base);
   font-weight: var(--font-weight-base);
+  cursor: none;
 }
 
 a {
