--- a/src/components/MenuBurger/index.module.css
+++ b/src/components/MenuBurger/index.module.css
@@ -1,6 +1,8 @@
 .root {
   position: relative;
-  padding: 30px 0;
+  @media (--desktop) {
+    padding: 30px 0;
+  }
 }
 
 .button {
@@ -19,7 +21,7 @@
     top: 50%;
     left: 0;
     width: 18px;
-    height: 3px;
+    height: 2px;
     background-color: black;
     content: '';
     transform: translate3d(0, -4px, 0);
