--- a/src/components/MenuBurger/index.module.css
+++ b/src/components/MenuBurger/index.module.css
@@ -1,8 +1,15 @@
 .root {
   position: relative;
+  opacity: 0;
+
   @media (--desktop) {
     padding: 30px 0;
   }
+}
+
+.root.loaded {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out 1.2s;
 }
 
 .button {
