--- a/src/templates/index-page.module.css
+++ b/src/templates/index-page.module.css
@@ -56,7 +56,124 @@
   }
 }
 
+.preHeading {
+  opacity: 0;
+  transform: translate3d(0, 100%, 0);
+}
+
+.postHeading {
+  opacity: 0;
+  transform: translate3d(0, -100%, 0);
+}
+
 .headingFirstLine {
+  & span:nth-child(1) {
+    opacity: 0.5;
+    filter: blur(2px);
+    transform: scale(2) translate3d(-100%, -100%, 0);
+  }
+  & span:nth-child(2) {
+    opacity: 0.2;
+    filter: blur(2px);
+    transform: scale(3) translate3d(-100%, 70%, 0);
+  }
+}
+
+.headingSecondLine {
+  & span:nth-child(1) {
+    opacity: 0.5;
+    filter: blur(2px);
+    transform: scale(2) translate3d(30%, -100%, 0);
+  }
+  & span:nth-child(2) {
+    opacity: 0.5;
+    transform: scale(2) translate3d(-50%, 70%, 0);
+  }
+  & span:nth-child(3) {
+    opacity: 0.3;
+    filter: blur(2px);
+    transform: scale(1.5) translate3d(-250%, 10%, 0);
+  }
+  & span:nth-child(4) {
+    opacity: 0.1;
+    filter: blur(3px);
+    transform: scale(3) translate3d(50%, -100%, 0);
+  }
+  & span:nth-child(5) {
+    opacity: 0.6;
+    transform: scale(2) translate3d(-400%, -50%, 0);
+  }
+  & span:nth-child(6) {
+    opacity: 0.2;
+    filter: blur(3px);
+    transform: scale(1.5) translate3d(100%, -150%, 0);
+  }
+  & span:nth-child(7) {
+    opacity: 0.7;
+    transform: scale(2) translate3d(-200%, -20%, 0);
+  }
+  & span:nth-child(8) {
+    opacity: 0.1;
+    filter: blur(3px);
+    transform: scale(3) translate3d(20%, 30%, 0);
+  }
+}
+
+.loaded {
+  & .headingFirstLine,
+  & .headingSecondLine {
+    & span {
+      opacity: 1;
+      filter: blur(0);
+      transform: scale(1) translate3d(0, 0, 0);
+      transition: all 1s var(--power3-ease-in-out);
+    }
+  }
+}
+
+.loading {
+  & .headingFirstLine,
+  & .headingSecondLine {
+    & span {
+      transition: all 6s ease-out;
+    }
+  }
+
+  & .headingFirstLine {
+    & span:nth-child(1) {
+      transform: scale(1.7) translate3d(-90%, -90%, 0);
+    }
+    & span:nth-child(2) {
+      transform: scale(2.6) translate3d(-95%, 60%, 0);
+    }
+  }
+
+  & .headingSecondLine {
+    & span:nth-child(1) {
+      transform: scale(1.7) translate3d(25%, -95%, 0);
+    }
+    & span:nth-child(2) {
+      transform: scale(1.7) translate3d(-45%, 65%, 0);
+    }
+    & span:nth-child(3) {
+      transform: scale(1.2) translate3d(-240%, 5%, 0);
+    }
+    & span:nth-child(4) {
+      transform: scale(2.7) translate3d(40%, -95%, 0);
+    }
+    & span:nth-child(5) {
+      transform: scale(1.7) translate3d(-340%, -45%, 0);
+    }
+    & span:nth-child(6) {
+      transform: scale(1.2) translate3d(-90%, -145%, 0);
+    }
+    & span:nth-child(7) {
+      transform: scale(1.8) translate3d(-190%, -15%, 0);
+    }
+    & span:nth-child(8) {
+      transform: scale(2.8) translate3d(17%, 25%, 0);
+    }
+  }
 }
 
 .root.menuOpen {
